Established connection with database

--- a/MealHelper.csproj
+++ b/MealHelper.csproj
@@ -22,4 +22,8 @@
     <_ContentIncludedByDefault Remove="Components\ApiCall.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MealHelperData\MealHelperData.csproj" />
+  </ItemGroup>
+
 </Project>
